<resources>
    <string name="app_name">CashRegisterProject</string>
    <string name="title">Assignment_2</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="C">C</string>
    <string name="type">Product Type</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="buy">Buy</string>
    <string name="manager">Manager</string>
</resources>