<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/teal_200"
        android:textColor="@color/black"
        android:text="@string/title"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"
        android:gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/typeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingStart="100dp"
            android:paddingEnd="10dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/totalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="100dp"
            android:paddingEnd="10dp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="4"
            android:columnCount="3"
            android:layout_margin="20dp">
            <Button
                android:id="@+id/num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num1"/>

            <Button
                android:id="@+id/num2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/num2"/>

            <Button
                android:id="@+id/num3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num3"/>

            <Button
                android:id="@+id/num4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/num4"/>

            <Button
                android:id="@+id/num5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num5"/>

            <Button
                android:id="@+id/num6"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/num6"/>

            <Button
                android:id="@+id/num7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num7"/>

            <Button
                android:id="@+id/num8"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/num8"/>

            <Button
                android:id="@+id/num9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num9"/>

            <Button
                android:id="@+id/num0"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/num0"/>

            <Button
                android:id="@+id/C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/C"/>

        </GridLayout>

        <Button
            android:id="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:layout_margin="20dp"
            android:text="@string/buy" />

    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/quantityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:paddingStart="100dp"
            android:paddingEnd="10dp"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="onClick"
            android:layout_margin="20dp"
            android:text="@string/manager" />
    </GridLayout>

    <ListView
        android:id="@+id/inventoryListView"
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        tools:context=".activities.MainActivity"/>
</LinearLayout>